Update and rename Categorical Embedder I Example Notebook (1).ipynb to CategoriExample Notebook.ipynb

--- a/example_notebook/CategoriExample Notebook.ipynb
+++ b/example_notebook/CategoriExample Notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center>Categorical Embedder</center>\n",
+    "## Categorical Embedder\n",
     "### Example"
    ]
   },
